--- a/practice 1.html
+++ b/practice 1.html
@@ -24,7 +24,7 @@
       </div>
     </div>
       <div class="upper-middle">
-        <img class="logo" src= ".\image/Google.png" height: "92"
+        <img class="logo" src= "./_image/Google.png" height: "92"
         width: "272">
       </div>
 
