Update and rename practice 1.html to INDEX.html

--- a/INDEX.html
+++ b/INDEX.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title> practice 1 </title>
+    <title> INDEX </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="practice style.css">
   </head>
