--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title> INDEX </title>
+    <title> Home work </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="practice style.css">
   </head>
