--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
       <div class="upper-middle">
-        <img class="logo" src= "./Google.png" height: "92"
+        <img class="logo" src= "./google.png" height: "92"
         width: "272">
       </div>
 
