--- a/index.html
+++ b/index.html
@@ -2,68 +2,56 @@
 <html>
 
   <head>
-    <title> Home work </title>
+    <title> practice 1 </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="practice style.css">
   </head>
   <body>
     <div id="practice">
       <div class="upper">
-        <div class="aa">
-          <div class="gmail">
-          <a href="https://mail.google.com">Gmail</a>
-          </div>
-          <div class="image">
-            <a href="https://www.google.co.kr/imghp?hl=ko&ogbl">이미지</a>
-          </div>
-          <div class="dots">
-          <a href="">...</a>
-          </div>
-            <button class="login" onclick="alert('로그인 실패')">로그인</button>
-        </div>
+            <a class = "gmail"href="https://mail.google.com">Gmail</a>
+            <a class="image" href="https://www.google.co.kr/imghp?hl=ko&ogbl">이미지</a>
+            <a class="apps" href=""><img class="apps" src="C:\Users\희진\Desktop\WEB\practice 1\image/apps.png"></a>
+            <button class="login" onclick="location.href='https://accounts.google.com/'">로그인</button>
       </div>
-    </div>
-      <div class="upper-middle">
-        <img class="logo" src= "./google.png" height: "92"
-        width: "272">
-      </div>
-
       <div class="middle">
-        <div class="search">
-            <input type="text" name="search">
-          </div>
+          <img class="logo" src= "C:\Users\희진\Desktop\WEB\practice 1\image/Google.png">
+      <div class="search">
+            <img class="glass" src="C:\Users\희진\Desktop\WEB\practice 1\image/glass.png">
+            <input type="text"> </input>
+              <img class="keyboard" src="C:\Users\희진\Desktop\WEB\practice 1\image/keyboard.png">
+              <img class="mic" src="C:\Users\희진\Desktop\WEB\practice 1\image/mic.png">
+         </div>
       </div>
-      <div class="lower-middle">
+      <div class="lower">
         <div class="box">
-        <button>Google 검색</button>
-        <button>I'm Feeling Lucky</button>
-      </div>
+          <button>Google 검색</button>
+          <button>I'm Feeling Lucky</button>
+        </div>
       </div>
     </div>
-  </body>
-
-<footer>
-  <div class="country">
-    <p> 대한민국 </p>
-  </div>
-  <div class="footer">
-  <div class="footer-left">
-    <ul>
-      <li><a href"">Google 정보</a></li>
-      <li><a href"">광고</a></li>
-      <li><a href"">비즈니스</a></li>
-      <li><a href"">검색의 원리</a></li>
-      </ul>
+    <footer>
+      <div class="country">
+        <p> 대한민국 </p>
+      </div>
+      <div class="footer">
+        <div class="footer-left">
+          <ul>
+            <li><a href"">Google 정보</a></li>
+            <li><a href"">광고</a></li>
+            <li><a href"">비즈니스</a></li>
+            <li><a href"">검색의 원리</a></li>
+          </ul>
         </div>
-  <div class="footer-right">
-      <ul>
-        <li><a href"">개인정보처리방침</a></li>
-        <li><a href"">약관</a></li>
-        <li><a href"">설정</a></li>
-      </ul>
+      <div class="footer-right">
+          <ul>
+            <li><a href"">개인정보처리방침</a></li>
+            <li><a href"">약관</a></li>
+            <li><a href"">설정</a></li>
+          </ul>
+      </div>
+    </div>
+    </footer>
   </div>
-
-</div>
-</footer>
-
+  </body>
 </html>
