--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <div class="upper">
             <a class = "gmail"href="https://mail.google.com">Gmail</a>
             <a class="image" href="https://www.google.co.kr/imghp?hl=ko&ogbl">이미지</a>
-            <a class="apps" href=""><img class="apps" src="C:\Users\희진\Desktop\WEB\practice 1\image/apps.png"></a>
+            <a class="apps" href=""><img class="apps" src="apps.png"></a>
             <button class="login" onclick="location.href='https://accounts.google.com/'">로그인</button>
       </div>
       <div class="middle">
-          <img class="logo" src= "C:\Users\희진\Desktop\WEB\practice 1\image/Google.png">
+          <img class="logo" src= "google.png">
       <div class="search">
-            <img class="glass" src="C:\Users\희진\Desktop\WEB\practice 1\image/glass.png">
+            <img class="glass" src="glass.png">
             <input type="text"> </input>
-              <img class="keyboard" src="C:\Users\희진\Desktop\WEB\practice 1\image/keyboard.png">
-              <img class="mic" src="C:\Users\희진\Desktop\WEB\practice 1\image/mic.png">
+              <img class="keyboard" src="keyboard.png">
+              <img class="mic" src="mic.png">
          </div>
       </div>
       <div class="lower">
