--- a/practice_1.html
+++ b/practice_1.html
@@ -12,17 +12,17 @@
         <nav class="menubox">
           <a class="item gmail" href="https://mail.google.com">Gmail</a>
           <a class="item image" href="https://www.google.co.kr/imghp?hl=ko&ogbl" alt="9dots">이미지</a>
-          <a class="item apps" href="#"><img class="dots" src="C:\Users\희진\Desktop\WEB\practice 1\image/apps.png"></a>
+          <a class="item apps" href="#"><img class="dots" src="./apps.png"></a>
           <button class="item login" onclick="location.href='https://accounts.google.com/'">로그인</button>
       </nav>
       </div>
       <div id="contents">
-          <img class="logo" src= "C:\Users\희진\Desktop\WEB\practice 1\image/Google.png">
+          <img class="logo" src= "./Google.png">
           <div class="search">
-              <img class="icon glass" src="C:\Users\희진\Desktop\WEB\practice 1\image/glass.png">
+              <img class="icon glass" src="./glass.png">
               <input type="text">
-              <img class="icon keyboard" src="C:\Users\희진\Desktop\WEB\practice 1\image/keyboard.png">
-              <img class="icon mic" src="C:\Users\희진\Desktop\WEB\practice 1\image/mic.png">
+              <img class="icon keyboard" src="./keyboard.png">
+              <img class="icon mic" src="./mic.png">
          </div>
          <div class="lower">
              <div class="box">
