--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title> practice 1 </title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="ractice_style.css">
+    <link rel="stylesheet" href="Practice_style.css">
   </head>
   <body>
     <div id="practice">
@@ -17,7 +17,7 @@
       </nav>
       </div>
       <div id="contents">
-          <img class="logo" src= "./Google.png">
+          <img class="logo" src= "./google.png">
           <div class="search">
               <img class="icon glass" src="./glass.png">
               <input type="text">
