--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div id="header">
         <nav class="menubox">
           <a class="item gmail" href="https://mail.google.com">Gmail</a>
-          <a class="item image" href="https://www.google.co.kr/imghp?hl=ko&ogbl" alt="9dots">이미지</a>
-          <a class="item apps" href="#"><img class="dots" src="./apps.png"></a>
+          <a class="item image" href="https://www.google.co.kr/imghp?hl=ko&ogbl">이미지</a>
+          <a class="item apps" href="#"><img class="dots" src="./apps.png"  alt="9dots"></a>
           <button class="item login" onclick="location.href='https://accounts.google.com/'">로그인</button>
       </nav>
       </div>
