--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title> practice 1 </title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="practice_style.css">
+    <link rel="stylesheet" href="Practice_style.css">
   </head>
   <body>
     <div id="practice">
